fix set high z-index for home page logo icon

--- a/src/app/miscellaneous/product-home/product-home.component.scss
+++ b/src/app/miscellaneous/product-home/product-home.component.scss
@@ -3,6 +3,7 @@ main {
   @extend .global--gutters;
 }
 .bg-image {
+  max-height: 100%;
   height: 100%;
   background-attachment: fixed;
   background-position: center;
@@ -32,7 +33,7 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 2;
+  z-index: 1;
   color: white;
   padding: 4rem;
   background-color: rgb(0,0,0); /* Fallback color */
@@ -40,8 +41,10 @@ main {
   .content {
     margin: 0 auto;
     .logo {
-      max-width: 20rem;
+      width: 20rem;
+      height: auto;
       margin: 0 auto;
+      z-index: 2;
     }
     a {
       text-transform: uppercase;
@@ -53,9 +56,6 @@ main {
     }
   }
 
-.landing-page-illustration {
-  max-width: 25rem;
-}
 
 }
 .about-us {
